# pathlib-cli

./: README.md  pyproject.toml
pathlib_cli/: __main__.py
