[tool.poetry]
name = "pathlib-cli"
version = "0.1.2"
description = "Command line interface for subset of Python's pathlib library to filter for parts of filenames and paths"
authors = ["Ben Skubi <skubi@ohsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
pathlib-cli = "pathlib_cli.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"